# protein-design-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.embedding  README.md  SUMMARY.md  api.py  app.py  app.py.bak  embedding_service.py  pyproject.toml
.trae/documents/: Implement PDB MCP Server and 3D Visualization.md  Integrate EC MCP Server into ProteinRAGAgent.md  Optimize RAG Initialization with Caching.md  Refactor Frontend to ChatGPT-like Interface.md  Refactoring ProteinDesignAgent to LangGraph.md  refactor.md
agent/: agent.py  cache.py  deep_agent_runtime.py  enzyme_agent.py.bak
agent/rag/: README.md  __init__.py  chroma_rag.py  paper_rag.py  pdf_processing.py  pinecone_rag.py  rag_cli.py
agent/skills/: EnzymeAnalysis.md  skill_system_new.py
agent/skills/catalytic_mechanism/: SKILL.md
deploy/: Dockerfile.frontend  docker-compose.prod.yml
deploy/nginx/: nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatArea.tsx  MessageBubble.tsx  PipelineStatus.tsx  ProteinViewer.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
k8s/: README.md  configmap.yaml  deployment-app.yaml  deployment-embedding.yaml  ingress.yaml  job-indexing.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml
mcp_servers/arxiv/: server.py
mcp_servers/biorxiv/: server.py
mcp_servers/ec/: server.py
mcp_servers/pdb/: server.py
mcp_servers/uniprot/: server.py
notebooks/: vector_database.ipynb
public/: agent_graph.html
tests/: test_agent_graph.py
(+1 files in other folders)
